--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="/brokul.png">
+  <title>
+    Brokul stickers
+  </title>
+
+</head>
+
+<body>
+  <style>
+    body {
+      background-color: rgb(243, 243, 243);
+    }
+
+    .appVersionInfo {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      margin: 0px 20px;
+      opacity: 0.3;
+    }
+  </style>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <div class="appVersionInfo">
+    <span>©2021 Victor Kevra</span>
+    <span>v1.0</span>
+  </div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
